package behavior.observer.ca4;

public interface ThanhVienListerner {
}
