package behavior.observer.ca4;

public class Tin {
    private String ten;
    private String noiDung;
}
